Don't parse "style" attributes in data documents unless someone asks for .style.  Bug 418214, r+sr=peterv, a=schrep