content/base/src/nsStyledElement.cpp
@@ -86,7 +86,7 @@ nsStyledElement::ParseAttribute(PRInt32 aNamespaceID, nsIAtom* aAttribute,
   if (aNamespaceID == kNameSpaceID_None) {
     if (aAttribute == nsGkAtoms::style) {
       SetFlags(NODE_MAY_HAVE_STYLE);
-      ParseStyleAttribute(this, aValue, aResult);
+      ParseStyleAttribute(this, aValue, aResult, PR_FALSE);
       return PR_TRUE;
     }
     if (aAttribute == nsGkAtoms::_class) {
@@ -165,7 +165,7 @@ nsStyledElement::BindToTree(nsIDocument* aDocument, nsIContent* aParent,
 
   // XXXbz if we already have a style attr parsed, this won't do
   // anything... need to fix that.
-  ReparseStyleAttribute();
+  ReparseStyleAttribute(PR_FALSE);
 
   return rv;
 }
@@ -184,7 +184,7 @@ nsStyledElement::GetStyle(nsIDOMCSSStyleDeclaration** aStyle)
 
   if (!slots->mStyle) {
     // Just in case...
-    ReparseStyleAttribute();
+    ReparseStyleAttribute(PR_TRUE);
 
     nsresult rv;
     if (!gCSSOMFactory) {
@@ -204,7 +204,7 @@ nsStyledElement::GetStyle(nsIDOMCSSStyleDeclaration** aStyle)
 }
 
 nsresult
-nsStyledElement::ReparseStyleAttribute()
+nsStyledElement::ReparseStyleAttribute(PRBool aForceInDataDoc)
 {
   if (!HasFlag(NODE_MAY_HAVE_STYLE)) {
     return NS_OK;
@@ -215,7 +215,7 @@ nsStyledElement::ReparseStyleAttribute()
     nsAttrValue attrValue;
     nsAutoString stringValue;
     oldVal->ToString(stringValue);
-    ParseStyleAttribute(this, stringValue, attrValue);
+    ParseStyleAttribute(this, stringValue, attrValue, aForceInDataDoc);
     // Don't bother going through SetInlineStyleRule, we don't want to fire off
     // mutation events or document notifications anyway
     nsresult rv = mAttrsAndChildren.SetAndTakeAttr(nsGkAtoms::style, attrValue);
@@ -228,12 +228,13 @@ nsStyledElement::ReparseStyleAttribute()
 void
 nsStyledElement::ParseStyleAttribute(nsIContent* aContent,
                                      const nsAString& aValue,
-                                     nsAttrValue& aResult)
+                                     nsAttrValue& aResult,
+                                     PRBool aForceInDataDoc)
 {
   nsresult result = NS_OK;
   nsIDocument* doc = aContent->GetOwnerDoc();
 
-  if (doc) {
+  if (doc && (aForceInDataDoc || !doc->IsLoadedAsData())) {
     PRBool isCSS = PR_TRUE; // assume CSS until proven otherwise
 
     if (!aContent->IsNativeAnonymous()) {  // native anonymous content
